2014-05-23  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-05-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Background.wrl: 

2014-05-22  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d:
	* example.wrl: 

2014-05-21  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Clone.wrl:
	* OutlineEditor.x3d: 

2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Clone.wrl:
	* OutlineEditor.x3d: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Nested.wrl:
	* OutlineEditorProto.x3d: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditorProto.x3d: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditorProto.x3d: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* OutlineEditor.x3d:
	* OutlineEditorProto.x3d: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Clones.wrl:
	* Connectors.wrl:
	* OutlineEditor.x3d: 

2014-05-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Clones.wrl: 

2014-05-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Clones.wrl: 

2014-05-16  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2014-05-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Clone.wrl:
	* OutlineEditor.x3d: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Clone.wrl: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* OutlineEditor.x3d:
	* OutlineEditorGrid.x3dv: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* ProtoNotFound.wrl:
	* OutlineEditor.wrl: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Clone.wrl: 

2014-05-13  Holger Seelig  <holger.seelig@yahoo.de>
