@@ -4,6 +4,10 @@
 
 2014-05-23  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineEditor.x3d: 
+
+2014-05-23  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Background.wrl: 
 
 2014-05-22  Holger Seelig  <holger.seelig@yahoo.de>
